test/errors/unreachable_after_return.sl
# expect: COMPERROR
auto fn = () -> fixed {
    return 1;
    print(2);
};
